--- a/user_admin/listTreatment_detail_done.html
+++ b/user_admin/listTreatment_detail_done.html
@@ -367,7 +367,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
-												<a href="user_admin/listTreatment_detail_done_edit.html" class="btn btn-outline-success toolbar-absolute"><i class="la la-edit"></i> Edit</a>
+												<a href="user_admin/listTreatment_detail_done_edit.html" class="btn btn-outline-success toolbar-absolute kt-hidden"><i class="la la-edit"></i> Edit</a>
 											</div>
 										</div>
 										<div class="tab-content">
@@ -429,6 +429,22 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            				</table>
 		                                            				<table class="table table-bordered table-hover table-checkable table_spk_done2" id=""></table>
 		                                            				<div class="form-group row">
+		                                            					<label for="tipeKomplain" class="col-3 col-form-label">Foto</label>
+		                                            					<div class="col-9">
+		                                            						<div class="row">
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash1.jpg">
+		                                            							</div>
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash2.jpg">
+		                                            							</div>
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash3.jpg">
+		                                            							</div>
+		                                            						</div>
+		                                            					</div>
+		                                            				</div>
+		                                            				<div class="form-group row">
 		                                            					<label for="tipeKomplain" class="col-3 col-form-label">Tipe Komplain</label>
 		                                            					<div class="col-9">
 		                                            						<input class="form-control" type="text" value="Eylash Extension" id="tipeKomplain" name="tipeKomplain" disabled="">
@@ -464,6 +480,22 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            				</table>
 		                                            				<table class="table table-bordered table-hover table-checkable table_spk_done2" id=""></table>
 		                                            				<div class="form-group row">
+		                                            					<label for="tipeKomplain" class="col-3 col-form-label">Foto</label>
+		                                            					<div class="col-9">
+		                                            						<div class="row">
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash1.jpg">
+		                                            							</div>
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash2.jpg">
+		                                            							</div>
+		                                            							<div class="col-4 mb-3">
+		                                            								<img width="100%" src="assets/media/misc/eyelash3.jpg">
+		                                            							</div>
+		                                            						</div>
+		                                            					</div>
+		                                            				</div>
+		                                            				<div class="form-group row">
 		                                            					<label for="tipeKomplain" class="col-3 col-form-label">Tipe Komplain</label>
 		                                            					<div class="col-9">
 		                                            						<input class="form-control" type="text" value="Eylash Extension" id="tipeKomplain" name="tipeKomplain" disabled="">
@@ -494,7 +526,10 @@ License: You must have a valid license purchased only from themeforest(the above
 														<div class="col-6">
 															<div class="row">
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																	<a  class="col-5 btn btn-outline-success no-print" href="user_admin/listTreatment_detail_done_edit.html" target="_blank">Edit</a>
+																</div>
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<a class="col-5 btn btn-warning no-print" href="user_admin/print_invoice.html">Print</a>
 																</div>
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
 																	<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
@@ -503,13 +538,23 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 		                                            </div>
 		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
-		                                                <tr>
-		                                                    <th width="30%">Tanggal</th>
-		                                                    <th width="10%">:</th>
-		                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-		                                                </tr>
+		                                            	<tr>
+		                                            		<th width="30%">Tanggal</th>
+		                                            		<th width="10%">:</th>
+		                                            		<th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+		                                            	</tr>
+		                                            	<tr>
+		                                            		<th width="35%">Waktu Mulai</th>
+		                                            		<th width="10%">:</th>
+		                                            		<th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                            	</tr>
+		                                            	<tr>
+		                                            		<th>Waktu Selesai</th>
+		                                            		<th>:</th>
+		                                            		<th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+		                                            	</tr>
 		                                            </table>
-		        									
+		        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
 													<div class="row" style="margin-top:50px;">
 														<div class="col-6" style="padding-right:0px;">
 															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
