--- a/user_admin/print_invoice.html
+++ b/user_admin/print_invoice.html
@@ -3,7 +3,7 @@
 <head>
 	<base href="../">
 	<meta charset="utf-8" />
-	<title>Detail Treatment | Admin Fabulash</title>
+	<title>INVOICE | Admin Fabulash</title>
 	<meta name="description" content="Updates and statistics">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
