--- a/user_admin/profile_biodata.html
+++ b/user_admin/profile_biodata.html
@@ -351,7 +351,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             		<div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Nama</label>
                                                         <div class="col-9">
-                                                            <input type="text" class="form-control disabled" name="karyawan_nama" value="Ica" readonly>
+                                                            <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
