perbaikan halaman terms and condition

--- a/user_administrasi/terms_condition.html
+++ b/user_administrasi/terms_condition.html
@@ -226,13 +226,13 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="col-md-12  col-xl-8">
 							<!--begin::Portlet-->
 							<div class="kt-portlet kt-portlet--mobile">
-								<div class="kt-portlet__head">
+								<div class="kt-portlet__head kt-hidden">
 									<div class="kt-portlet__head-label ">
 										<h2>Terms and Conditions</h2>
 									</div>
 								</div>
 								<div class="kt-portlet__body">
-									<div class="kt-scroll" data-scroll="true" data-height="450" data-scrollbar-shown="true">
+									<div >
 										<section class="termCondition" id="termsCondition">
 											<div class="container">
 												<h1>Terms and Conditions</h1>
