User Admin: customer_detail.html Tambah detail email

--- a/user_admin/customer_detail.html
+++ b/user_admin/customer_detail.html
@@ -350,7 +350,8 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 	                                                <span class="kt-font-bold">Lahir <span name="customer_tanggalLahir"></span>09 April 1997</span>&nbsp;<br>
-	                                                <span class="kt-font-bold">Sejak <span name="customer_membership"></span>02 Oktober 2019</span>&nbsp;<br>
+	                                                <span class="kt-font-bold">Bergabung sejak <span name="customer_membership"></span>02 Oktober 2019</span>&nbsp;<br>
+	                                                 <span class="kt-font-bold" name="customer_email">darnillia123@gmail.com</span>&nbsp;<br>
 												</div>
 												<div class="col-6">
 													<div class="row">
