ubah tampilan profile biodata

--- a/user_gudang/profile_biodata.html
+++ b/user_gudang/profile_biodata.html
@@ -331,9 +331,14 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <div class="row">
                                             	<div class="col-lg-6 kt-margin-b-10">
                                             		<div class="container mb-4 text-center">
-                                            			<img class="img-thumbnail rounded-circle" width="42%" src="assets/media/users/300_11.jpg">
+                                            			<img class="img-thumbnail rounded-circle" width="52%" src="assets/media/users/300_11.jpg">
                                             		</div>
-                                            		<div class="form-group row">
+                                            		<div class="text-center">
+                                            			<h2 name="karyawan_nama">Nurul Azizah</h5>
+                                            			<h5 name="karyawan_jabatan">Admin Studio</h5>
+                                            			<h6 name="karyawan_kategori">Eylesesh Extension</h6>
+                                            		</div>
+                                            		<!-- <div class="form-group row">
                                                         <label for="example-text-input" class="col-3 col-form-label">Nama</label>
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
@@ -350,7 +355,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         <div class="col-9">
                                                             <input type="text" class="form-control" name="karyawan_kategori" value="Eylesesh Extension" readonly>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                    
                                             	</div>
                                                 <div class="col-lg-6 kt-margin-b-10">
