--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -421,71 +421,90 @@ License: You must have a valid license purchased only from themeforest(the above
 											<div class="tab-content">
 												<div class="tab-pane active" id="tab-biodata" role="tabpanel">
                                                     <div class="row">
-                                                        <div class="col-lg-6 kt-margin-b-10">
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Nama</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Alamat</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Email</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_email" value="ica@gmail.com" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">No. HP</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_telepon" value="081392385697" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Username</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_username" value="ica" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Password</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_password" value="123456" readonly>
-            													</div>
-            												</div>
-                                                        </div>
-                                                        <div class="col-lg-6 kt-margin-b-10">
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_gaji" value="Rp. 6.000.000,00" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Tipe Komisi</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_komisi" value="Pokok" readonly>
-            													</div>
-            												</div>
-                                                            <div class="form-group row">
-            													<label for="example-text-input" class="col-3 col-form-label">Bagian</label>
-            													<div class="col-9">
-            														<input type="text" class="form-control" name="karyawan_bagian" value="Eyelash" readonly>
-            													</div>
-            												</div>
-                                                        </div>
-                                                        <div class="col-lg-12">
-                                                            <div class="justify-end">
-                                                                <button type="button" class="btn btn-success col-2" data-toggle="modal" data-target="#kt_modal_treatment_selesai">Edit</button>&nbsp;
-                                                                <button type="button" class="btn btn-danger col-2">Delete</button>
-                                                            </div>
+                                            	<div class="col-lg-6 kt-margin-b-10">
+                                            		<div class="container mb-4 text-center">
+                                            			<img class="img-thumbnail rounded-circle" width="52%" src="assets/media/users/300_11.jpg">
+                                            		</div>
+                                            		<div class="text-center">
+                                            			<h2 name="karyawan_nama">Nurul Azizah</h5>
+                                            			<h5 name="karyawan_jabatan">Admin Studio</h5>
+                                            			<h6 name="karyawan_kategori">Eylesesh Extension</h6>
+                                            		</div>
+                                            		<!-- <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Nama</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_nama" value="Ica" readonly>
                                                         </div>
                                                     </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Jabatan</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_jabatan" value="Admin Studio" readonly>
+                                                        </div>
+                                                    </div>
+                                                     <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Kategori</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_kategori" value="Eylesesh Extension" readonly>
+                                                        </div>
+                                                    </div> -->
+                                                   
+                                            	</div>
+                                                <div class="col-lg-6 kt-margin-b-10">
+                                                	<div class="form-group row">
+                                                		<label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                                                		<div class="col-9">
+                                                			<input type="text" class="form-control" name="karyawan_alamat" value="Jl. Jendral Sudirman" readonly>
+                                                		</div>
+                                                	</div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Email</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_email" value="ica@gmail.com" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">No. HP</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_telepon" value="081392385697" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Username</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_username" value="ica" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row kt-hidden">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Password</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_password" value="123456" readonly>
+                                                        </div>
+                                                    </div>
+                                                      <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_gaji" value="Rp. 6.000.000,00" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Tipe Komisi</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_komisi" value="Pokok" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-text-input" class="col-3 col-form-label">Bagian</label>
+                                                        <div class="col-9">
+                                                            <input type="text" class="form-control" name="karyawan_bagian" value="Eyelash" readonly>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="col-lg-4 kt-margin-b-10">
+                                                  
+                                                </div> -->
+
+                                            </div>
 												</div>
 												<div class="tab-pane" id="tab-treatment" role="tabpanel">
 													<form class="kt-margin-b-5">
