User Super Admin :hr_karyawan_detail.html tambah column treatment samping "kategori treatment", dan jumlah treatment per customer

--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -510,7 +510,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_treatment"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih tanggal" data-col-index="1" id="datepicker_karyawan_treatment"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -519,6 +519,14 @@ License: You must have a valid license purchased only from themeforest(the above
 															</div>
 															<div class="col-lg-4 col-sm-6">
 			    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_treatment">
+															</div>
+															<div class="col-lg-3 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<div class="input-group-append">
+																	<span class="input-group-text costume-group-text">
+																		Jumlah Treatment
+																	</span>
+																</div>
+																<input readonly type="text" class="form-control" name="start" value="25" />
 															</div>
 		    											</div>
 		    										</form>
