--- a/user_superadmin/index.html
+++ b/user_superadmin/index.html
@@ -100,6 +100,12 @@ License: You must have a valid license purchased only from themeforest(the above
 			width: 100%;
 			height: 400px;
 		}
+		#table_kategori_treatment_length,
+		#table_kategori_treatment_filter,
+		#table_list_treatment_length,
+		#table_list_treatment_filter{
+			display: none
+		}
 	</style>
 </head>
 <!-- end::Head -->
@@ -253,14 +259,6 @@ License: You must have a valid license purchased only from themeforest(the above
 				</ul>
 			</div>
 		</li>
-		<li class="kt-menu__item" aria-haspopup="true"><a href="user_superadmin/voucher.html" class="kt-menu__link "><span class="kt-menu__link-icon">
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-				<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-					<rect x="0" y="0" width="24" height="24"/>
-					<path d="M3,10.0500091 L3,8 C3,7.44771525 3.44771525,7 4,7 L9,7 L9,9 C9,9.55228475 9.44771525,10 10,10 C10.5522847,10 11,9.55228475 11,9 L11,7 L21,7 C21.5522847,7 22,7.44771525 22,8 L22,10.0500091 C20.8588798,10.2816442 20,11.290521 20,12.5 C20,13.709479 20.8588798,14.7183558 22,14.9499909 L22,17 C22,17.5522847 21.5522847,18 21,18 L11,18 L11,16 C11,15.4477153 10.5522847,15 10,15 C9.44771525,15 9,15.4477153 9,16 L9,18 L4,18 C3.44771525,18 3,17.5522847 3,17 L3,14.9499909 C4.14112016,14.7183558 5,13.709479 5,12.5 C5,11.290521 4.14112016,10.2816442 3,10.0500091 Z M10,11 C9.44771525,11 9,11.4477153 9,12 L9,13 C9,13.5522847 9.44771525,14 10,14 C10.5522847,14 11,13.5522847 11,13 L11,12 C11,11.4477153 10.5522847,11 10,11 Z" fill="#000000" opacity="0.3" transform="translate(12.500000, 12.500000) rotate(-45.000000) translate(-12.500000, -12.500000) "/>
-				</g>
-			</svg>
-		</span><span class="kt-menu__link-text">Voucher</span></a></li>
 		<li class="kt-menu__item" aria-haspopup="true"><a href="user_superadmin/voucher.html" class="kt-menu__link "><span class="kt-menu__link-icon">
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 				<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -535,7 +533,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="col-8">
 											<div class="iconx">
 												<h5 class="line-custome">Gross Margin</h5>
-												<span class="info-value ">Rp <span id="crossMargin" name="crossMargin">100%</span></span>
+												<span class="info-value "id="crossMargin" name="crossMargin">100%</span>
 											</div>
 										</div>
 									</div>
@@ -578,13 +576,14 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="row">
 						<div class="col">
 							<div class="kt-portlet" style="padding: 15px">
-								<h5>Category by Volume</h5>
-								 
+								<h5>List Kategori Treatment</h5>
+								 <table class="table table-bordered table-hover table-checkable" id="table_kategori_treatment"></table>
 							</div>
 						</div>
 						<div class="col">
 							<div class="kt-portlet" style="padding: 15px">
-								<h5>Category by Sales</h5>
+								<h5>List Treatment</h5>
+								 <table class="table table-bordered table-hover table-checkable" id="table_list_treatment"></table>
 							</div>
 						</div>
 					</div>
