Tambahkan tombol delete http://localhost/fabulash/fabulash-fe/user_supervisor_studio/request_out_new.html

--- a/user_supervisor_studio/request_out_new.html
+++ b/user_supervisor_studio/request_out_new.html
@@ -375,17 +375,18 @@ License: You must have a valid license purchased only from themeforest(the above
 											<form id="kt_form_request_barang">
 												<div class="kt-margin-b-20">
 													<label class="kt-margin-b-15" style="font-size: 1rem;font-weight: 400;">Item List : </label>
-													<div class="table-responsive">
+													<div id="container-request" class="table-responsive">
 														<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_request_inventory_new">
 															<thead>
 			                                                    <tr role="row">
 			                                                        <th style="width: 5%">No</th>
-			                                                        <th style="width: 25%">Barang</th>
+			                                                        <th style="width: 22%">Barang</th>
 			                                                        <th style="width: 15%">Satuan</th>
 			                                                        <th style="width: 12.5%">Request</th>
 			                                                        <th style="width: 12.5%">Terkirim</th>
 			                                                        <th style="width: 12.5%">Diterima</th>
-			                                                        <th style="width: 17.5%">Margin Hilang</th>
+			                                                        <th style="width: 15.5%">Margin Hilang</th>
+			                                                         <th style="width: 5%">Aksi</th>
 			                                                    </tr>
 			                                                </thead>
 			                                                <tbody id="item_list">
@@ -495,10 +496,10 @@ License: You must have a valid license purchased only from themeforest(the above
             $('#item_add').click(function() {
 				document.querySelector('#item_list').insertAdjacentHTML (
 					'beforeend',
-					`<tr role="row">
+					`<tr role="row" class="item-list" data-id="`+ i +`">
                         <td>`+ i +`</td>
 						<td class="text-center">
-							<select class="form-control request_required" name="request_barang`+ i +`">
+							<select class="custom-select form-control request_required" name="request_barang`+ i +`">
                                 <option value="" selected disabled>Nama Barang</option>
 								<option>Eyelash Size 12</option>
 								<option>Eyelash Size 12</option>
@@ -506,7 +507,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							</select>
 						</td>
 						<td class="text-center">
-							<select class="form-control request_required" name="request_satuan`+ i +`">
+							<select class="custom-select form-control request_required" name="request_satuan`+ i +`">
                                 <option value="" selected disabled>Satuan</option>
 								<option>Box</option>
 								<option>Box</option>
@@ -525,6 +526,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						<td class="text-center">
 							<input type="number" min="1" class="form-control readonly" name="request_margin`+ i +`">
 						</td>
+						<td class="text-center">
+							<button type="button" class="btn btn-link list-hapus" id="btn_hapus" data-id="`+i+`"> <span class="fa fa-times"></span> </button>
+						</td>
 					</tr>`
 				);
 				i++
@@ -532,7 +536,16 @@ License: You must have a valid license purchased only from themeforest(the above
 
 			$('document').ready(function () {
 				$('#item_add').click();
-			})
+			});
+
+
+			$('#container-request').on('click','.list-hapus', function (e) {
+				let id = $(this).data('id');
+				// if (id > 1) {
+					$('.item-list[data-id="' + id + '"]').remove();
+				// }
+				
+			});
 
             //Sweetalert
             $('#kt_sweetalert_request_berhasil').click(function(e) {
