testing defer di index superadmin

--- a/user_superadmin/index.html
+++ b/user_superadmin/index.html
@@ -684,7 +684,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		KTBootstrapDaterangepicker.init();
 	});
 </script>
-<script>
+<script defer>
 	am4core.ready(function() {
 
 // Themes begin
@@ -869,7 +869,7 @@ chart.scrollbarX.parent = chart.bottomAxesContainer;
 
 }); // end am4core.ready()
 </script>
-<script>
+<script defer>
 am4core.ready(function() {
 
 // Themes begin
