Halaman Edit Customer

--- a/user_superadmin/customer_detail.html
+++ b/user_superadmin/customer_detail.html
@@ -393,8 +393,11 @@ License: You must have a valid license purchased only from themeforest(the above
 														<div class="col-12" style="text-align: right; margin-bottom:5px;">
 															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
 														</div>
-														<div class="col-12" style="text-align: right;">
+														<div class="col-12" style="text-align: right;margin-bottom:5px;">
 															<button class="col-4 btn btn-success">Agreement</button>
+														</div>
+														<div class="col-12" style="text-align: right;">
+															<a href="user_superadmin/customer_detail_edit.html" class="col-4 btn btn-info">Edit</a>
 														</div>
 													</div>
 												</div>
